--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,31 @@
 @font-face {
   font-family: 'VerminVibes';
   src: local("VerminVibes"), 
-       url("src/assets/fonts/vermin.ttf") format("truetype");
+       url("./src/assets/fonts/vermin.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'Novega';
   src: local("Novega"), 
-       url("src/assets/fonts/novega.ttf") format("truetype");
+       url("./src/assets/fonts/novega.ttf") format("truetype");
 }
 
 @font-face {
   font-family: 'KnightWarrior';
   src: local("KnightWarrior"), 
-       url("src/assets/fonts/knightWarrior.otf") format("opentype");
+       url("./src/assets/fonts/knightWarrior.otf") format("opentype");
 }
 
 @font-face {
   font-family: 'FastLines';
   src: local("FastLines"), 
-       url("src/assets/fonts/fastLines.otf") format("opentype");
+       url("./src/assets/fonts/fastLines.otf") format("opentype");
 }
 
 @font-face {
   font-family: 'CrossFly';
   src: local("CrossFly"), 
-       url("src/assets/fonts/crossFly.otf") format("opentype");
+       url("./src/assets/fonts/crossFly.otf") format("opentype");
 }
 
 @tailwind base;
