Updated Responsive Issues

--- a/src/pages/merchandise/merchandise.css
+++ b/src/pages/merchandise/merchandise.css
@@ -1,30 +1,35 @@
-.cu-main {
+
+.cu-main{
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Use only one justify-content property */
+    justify-content: justify-evenly;
     align-items: center;
+    justify-content: center;
     background-attachment: fixed;
     padding-top: 70px;
     background-image: url('../../assets/customIllustration/cricketBackground.jpg');
     background-size: 100%;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: cover; /* Ensures the image covers the entire area */
+    background-position: center; /* Centers the image */
+    background-repeat: no-repeat; 
     font-family: "Barlow", sans-serif;
+
 }
-
-
 .disc{
+
     font-size: 24px;
     display: flex;
     margin-top: 38px;
     margin-left: 20px;
     font-weight: 600;
     color:#D4BEE4;
-}
 
+    
+
+}
 .merch-btn{
     margin-top: 12px;
     color: black;
@@ -36,23 +41,19 @@
     margin-bottom: 12px;
     color: #D3EE98;
 }
-
 .samar-sizes{
     margin-top: 10px;
     margin-bottom: 15px;
 }
-
 .plus{
     margin-right: 40px;
     margin-top: 30px;
     justify-content: center;
 }
-
 .sign-right{
     position: relative;
     left: 21.5%;
 }
-
 .sign-left{
     position: relative;
     left: -21.5%;
@@ -62,18 +63,22 @@
     position: absolute;
     margin-left: 5px;
     margin-right: 5px;
+
+
 }
 
 .gameconsole{
     height: 80px;
     width: 80px;;
+
+
 }
 
 .heading_merch{
     font-size: 40px;
     margin-top: 80px;
     margin-bottom: 35px;
-    font-family: VerminVibes;
+    font-family: crossFly;
     color: #D3EE98;
     text-shadow: 2.85px 2.85px 0.532px black;
 }
@@ -639,4 +644,3 @@ h1 {
         margin-right: 40px;
     }
 }
-
