--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -1,29 +1,29 @@
 @font-face {
-    font-family: 'VerminVibes';
+    font-family: 'verminVibes';
     src: local("VerminVibes"), 
          url("src/assets/fonts/vermin.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Novega';
+    font-family: 'novega';
     src: local("Novega"), 
          url("src/assets/fonts/novega.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'KnightWarrior';
+    font-family: 'knightWarrior';
     src: local("KnightWarrior"), 
          url("src/assets/fonts/knightWarrior.otf") format("opentype");
 }
 
 @font-face {
-    font-family: 'FastLines';
+    font-family: 'fastLines';
     src: local("FastLines"), 
          url("src/assets/fonts/fastLines.otf") format("opentype");
 }
 
 @font-face {
-    font-family: 'CrossFly';
+    font-family: 'crossFly';
     src: local("CrossFly"), 
          url("src/assets/fonts/crossFly.otf") format("opentype");
 }
