--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -1,50 +1,59 @@
 @font-face {
-    font-family: 'verminVibes';
-    src: local("VerminVibes"), 
-         url("src/assets/fonts/vermin.ttf") format("truetype");
+    font-family: 'VerminVibes';
+    src: url('https://drive.google.com/uc?export=view&id=1Kh5QbJly3oeE9BzaTtIejzXfy4C-otvc') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'novega';
-    src: local("Novega"), 
-         url("src/assets/fonts/novega.ttf") format("truetype");
+    font-family: 'Novega';
+    src: url('https://drive.google.com/uc?export=view&id=1xrvyBdEdqgR7l9elk3Vbp8HhgOrZA7bU') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'knightWarrior';
-    src: local("KnightWarrior"), 
-         url("src/assets/fonts/knightWarrior.otf") format("opentype");
+    font-family: 'KnightWarrior';
+    src: url('https://drive.google.com/uc?export=view&id=1kRYbSviu1aAoXZHZTYoPCWz2LCaK016z') format('opentype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'fastLines';
-    src: local("FastLines"), 
-         url("src/assets/fonts/fastLines.otf") format("opentype");
+    font-family: 'FastLines';
+    src: url('https://drive.google.com/uc?export=view&id=1Ve6aslrvfptmUTzsiY5lW4h_i_YSyKgV') format('opentype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'crossFly';
-    src: local("CrossFly"), 
-         url("src/assets/fonts/crossFly.otf") format("opentype");
+    font-family: 'CrossFly';
+    src: url('https://drive.google.com/uc?export=view&id=1k30BeFf8n7iLWv-3p8rhID4IAvtHdV29') format('opentype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'speedPixel';
-    src: local("speedPixel"), 
-         url("src/assets/fonts/speedPixel.ttf") format("truetype");
+    font-family: 'SpeedPixel';
+    src: url('https://drive.google.com/uc?export=view&id=13gB_PKRpayU2hH7OA8lKjORs7SnfVZRv') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
-    font-family: 'speedPixelItalic';
-    src: local("speedPixelItalic"), 
-         url("src/assets/fonts/speedPixelItalic.ttf") format("truetype");
+    font-family: 'SpeedPixelItalic';
+    src: url('https://drive.google.com/uc?export=view&id=1C9xvHnvHez336qJm65vOsGtG2ebwsM_W') format('truetype');
+    font-weight: normal;
+    font-style: italic;
 }
 
 @font-face {
     font-family: 'Brave81';
-    src: local("Brave81"), 
-         url("src/assets/fonts/Brave81.ttf") format("truetype");
+    src: url('https://drive.google.com/uc?export=view&id=1hXb8BFmn4E5PN4l7Q21otrILZtwcIAq9') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
+
 
 @tailwind base;
 @tailwind components;
