--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -1,59 +1,50 @@
 @font-face {
     font-family: 'VerminVibes';
-    src: url('https://drive.google.com/uc?export=view&id=1Kh5QbJly3oeE9BzaTtIejzXfy4C-otvc') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    src: local("VerminVibes"), 
+         url("/assets/fonts/vermin.ttf") format("truetype");
 }
 
 @font-face {
     font-family: 'Novega';
-    src: url('https://drive.google.com/uc?export=view&id=1xrvyBdEdqgR7l9elk3Vbp8HhgOrZA7bU') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    src: local("Novega"), 
+         url("/assets/fonts/novega.ttf") format("truetype");
 }
 
 @font-face {
     font-family: 'KnightWarrior';
-    src: url('https://drive.google.com/uc?export=view&id=1kRYbSviu1aAoXZHZTYoPCWz2LCaK016z') format('opentype');
-    font-weight: normal;
-    font-style: normal;
+    src: local("KnightWarrior"), 
+         url("/assets/fonts/knightWarrior.otf") format("opentype");
 }
 
 @font-face {
     font-family: 'FastLines';
-    src: url('https://drive.google.com/uc?export=view&id=1Ve6aslrvfptmUTzsiY5lW4h_i_YSyKgV') format('opentype');
-    font-weight: normal;
-    font-style: normal;
+    src: local("FastLines"), 
+         url("/assets/fonts/fastLines.otf") format("opentype");
 }
 
 @font-face {
     font-family: 'CrossFly';
-    src: url('https://drive.google.com/uc?export=view&id=1k30BeFf8n7iLWv-3p8rhID4IAvtHdV29') format('opentype');
-    font-weight: normal;
-    font-style: normal;
+    src: local("CrossFly"), 
+         url("/assets/fonts/crossFly.otf") format("opentype");
 }
 
 @font-face {
-    font-family: 'SpeedPixel';
-    src: url('https://drive.google.com/uc?export=view&id=13gB_PKRpayU2hH7OA8lKjORs7SnfVZRv') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'speedPixel';
+    src: local("speedPixel"), 
+         url("/assets/fonts/speedPixel.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'SpeedPixelItalic';
-    src: url('https://drive.google.com/uc?export=view&id=1C9xvHnvHez336qJm65vOsGtG2ebwsM_W') format('truetype');
-    font-weight: normal;
-    font-style: italic;
+    font-family: 'speedPixelItalic';
+    src: local("speedPixelItalic"), 
+         url("/assets/fonts/speedPixelItalic.ttf") format("truetype");
 }
 
 @font-face {
     font-family: 'Brave81';
-    src: url('https://drive.google.com/uc?export=view&id=1hXb8BFmn4E5PN4l7Q21otrILZtwcIAq9') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    src: local("Brave81"), 
+         url("/assets/fonts/Brave81.ttf") format("truetype");
 }
-
 
 @tailwind base;
 @tailwind components;
